--- a/files/css/style_navbar.css
+++ b/files/css/style_navbar.css
@@ -77,7 +77,7 @@ header {
 }
 
 .brand_color{
-	color:#482E8B;
+	color: #482E8B;
 }
 .icon_divider{
 	border-color:black;
@@ -88,6 +88,27 @@ header {
 	position: relative;
 	min-height: 35vh;
 	background-color: #efefef;
+}
+.filter_heading{
+	font-family: "lucida grande";
+	font-size: 2.5vh;
+	margin-bottom: 2vh;
+}
+.filter_heading .left_arrow{
+	margin-right: 30px;
+	font-size: 2vh;
+	color: #482E8B;
+}
+.filter_heading .left_arrow:hover{
+	cursor: pointer;
+}
+.filter_heading .right_arrow{
+	margin-left: 30px;
+	font-size: 2vh;
+	color: #482E8B;
+}
+.filter_heading .right_arrow:hover{
+	cursor: pointer;
 }
 .filter_icons{
 	display: block;
@@ -104,7 +125,7 @@ header {
 .selected_filter{
 	display: inline-block;
 	position: relative;
-	min-width: 5vw;
+	min-width: 4vw;
 }
 #filter1 i{
 	position: absolute;
